Bug 880918 - add a toolbarbutton sub-binding that wraps labels, r=dao,Enn
UltraBlame original commit: 0b6c881ba74cbe77c6a317463b0459dda7d59c9c

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -814,6 +814,46 @@ button
 )
 ;
 }
+toolbarbutton
+[
+type
+=
+"
+wrap
+"
+]
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+toolbarbutton
+.
+xml
+#
+toolbarbutton
+-
+wrapping
+-
+label
+"
+)
+;
+}
 toolbar
 [
 mode
